--- a/sass/main.sass
+++ b/sass/main.sass
@@ -38,3 +38,35 @@ footer
 	    &:hover
 	    	height: 260px
 	    	width: 260px
+	#arrow-left
+		position: absolute
+		z-index: 5
+		bottom: 45%
+		right: 1%
+		width: 2.4em
+		height: 2.4em
+		border-right: 1.2em solid black
+		border-top: 1.2em solid black
+		transform: rotate(45deg)
+		box-shadow: -1px -1px 10px -2px rgba(0, 0, 0, 0.5)
+	#test:after 
+		content: "";
+		position: absolute;
+		width: 200px;
+		height: 200px;
+		transform: rotate(45deg); /* Prefixes... */
+		top: 75px;
+		left: 25px;
+		box-shadow: 10px 0 5px -2px #888
+		
+	#arrow-right
+	#test
+		position: absolute
+		z-index: 5
+		bottom: 45%
+		right: 1%
+		width: 0.4em
+		height: 0.4em
+		border-right: 0.2em solid black
+		border-top: 0.2em solid black
+		transform: rotate(45deg)
