Work in progress

--- a/views/header.jade
+++ b/views/header.jade
@@ -3,7 +3,12 @@ header
 	span
 		label city:
 		select
+			each item in regions
+				option #{item.region}
 	span
 		label stop count:
 		select
+			- var stopCounts = [30, 40, 50, 60, 70, 80, 90, 100]
+			each count in stopCounts
+				option #{count}
 			
