--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= title
+    title= "Street Viewer"
     meta(charser="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     link(rel='stylesheet', href='../public/stylesheets/main.css')
