--- a/views/header.jade
+++ b/views/header.jade
@@ -2,13 +2,15 @@ header
 	h1 Street Viewer
 	span
 		label city:
-		select
+		select#region
 			each item in regions
-				option #{item.region}
+				option(value="#{item.region}") #{item.region}
 	span
 		label stop count:
-		select
+		select#stopCount
 			- var stopCounts = [30, 40, 50, 60, 70, 80, 90, 100]
 			each count in stopCounts
-				option #{count}
+				option(value="#{count}") #{count}
+
+	button#submit Submit
 			
