--- a/sass/main.sass
+++ b/sass/main.sass
@@ -9,15 +9,24 @@ body
 
 header
 	margin-left: 2%
+	display: flex
+	align-items: center
+	height: 85px
 	h1
-		display: inline-block
-	span
-		margin-left: 10px
+		width: 12%
 
 footer 
 	position: absolute
 	bottom: 0
 	left: 45%
+
+#region-form
+	width: 20%
+	label
+		margin-left: 2%
+		font-size: 17px
+	input
+		margin-left: 2%
 
 .container
 	height: 87%
